--- a/404.html
+++ b/404.html
@@ -8,13 +8,13 @@
     <link rel="icon" href="favicon.ico">
     <meta name="description" content="Just playing around">
     
-    <link rel="preload" href="/jiuto_blog/assets/css/0.styles.8eccc1ce.css" as="style"><link rel="preload" href="/jiuto_blog/assets/js/app.4e58b407.js" as="script"><link rel="preload" href="/jiuto_blog/assets/js/6.c8b7a84a.js" as="script"><link rel="prefetch" href="/jiuto_blog/assets/js/10.2cea7047.js"><link rel="prefetch" href="/jiuto_blog/assets/js/11.027e819a.js"><link rel="prefetch" href="/jiuto_blog/assets/js/12.d4283da2.js"><link rel="prefetch" href="/jiuto_blog/assets/js/2.36a0744b.js"><link rel="prefetch" href="/jiuto_blog/assets/js/3.bb659546.js"><link rel="prefetch" href="/jiuto_blog/assets/js/4.865692a8.js"><link rel="prefetch" href="/jiuto_blog/assets/js/5.06b13832.js"><link rel="prefetch" href="/jiuto_blog/assets/js/7.50b470ca.js"><link rel="prefetch" href="/jiuto_blog/assets/js/8.4cb29c83.js"><link rel="prefetch" href="/jiuto_blog/assets/js/9.ac5e18c9.js">
+    <link rel="preload" href="/jiuto_blog/assets/css/0.styles.8eccc1ce.css" as="style"><link rel="preload" href="/jiuto_blog/assets/js/app.350efa8f.js" as="script"><link rel="preload" href="/jiuto_blog/assets/js/6.c8b7a84a.js" as="script"><link rel="prefetch" href="/jiuto_blog/assets/js/10.98adf9c6.js"><link rel="prefetch" href="/jiuto_blog/assets/js/11.c3803c05.js"><link rel="prefetch" href="/jiuto_blog/assets/js/12.d4283da2.js"><link rel="prefetch" href="/jiuto_blog/assets/js/2.36a0744b.js"><link rel="prefetch" href="/jiuto_blog/assets/js/3.bb659546.js"><link rel="prefetch" href="/jiuto_blog/assets/js/4.865692a8.js"><link rel="prefetch" href="/jiuto_blog/assets/js/5.06b13832.js"><link rel="prefetch" href="/jiuto_blog/assets/js/7.13972075.js"><link rel="prefetch" href="/jiuto_blog/assets/js/8.6f062934.js"><link rel="prefetch" href="/jiuto_blog/assets/js/9.ef110779.js">
     <link rel="stylesheet" href="/jiuto_blog/assets/css/0.styles.8eccc1ce.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>Looks like we've got some broken links.</blockquote> <a href="/jiuto_blog/" class="router-link-active">
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>That's a Four-Oh-Four.</blockquote> <a href="/jiuto_blog/" class="router-link-active">
       Take me home.
     </a></div></div><div class="global-ui"></div></div>
-    <script src="/jiuto_blog/assets/js/app.4e58b407.js" defer></script><script src="/jiuto_blog/assets/js/6.c8b7a84a.js" defer></script>
+    <script src="/jiuto_blog/assets/js/app.350efa8f.js" defer></script><script src="/jiuto_blog/assets/js/6.c8b7a84a.js" defer></script>
   </body>
 </html>
