docs: add utils.html

--- a/404.html
+++ b/404.html
@@ -8,13 +8,13 @@
     <link rel="icon" href="favicon.ico">
     <meta name="description" content="Just playing around">
     
-    <link rel="preload" href="/jiuto_blog/assets/css/0.styles.8eccc1ce.css" as="style"><link rel="preload" href="/jiuto_blog/assets/js/app.5e3ef2d8.js" as="script"><link rel="preload" href="/jiuto_blog/assets/js/6.c8b7a84a.js" as="script"><link rel="prefetch" href="/jiuto_blog/assets/js/10.027c6810.js"><link rel="prefetch" href="/jiuto_blog/assets/js/11.ddc1199f.js"><link rel="prefetch" href="/jiuto_blog/assets/js/12.eb6244c5.js"><link rel="prefetch" href="/jiuto_blog/assets/js/13.8b2859a7.js"><link rel="prefetch" href="/jiuto_blog/assets/js/14.59eaa381.js"><link rel="prefetch" href="/jiuto_blog/assets/js/2.36a0744b.js"><link rel="prefetch" href="/jiuto_blog/assets/js/3.a7b40a35.js"><link rel="prefetch" href="/jiuto_blog/assets/js/4.865692a8.js"><link rel="prefetch" href="/jiuto_blog/assets/js/5.06b13832.js"><link rel="prefetch" href="/jiuto_blog/assets/js/7.158b011e.js"><link rel="prefetch" href="/jiuto_blog/assets/js/8.b6144cfd.js"><link rel="prefetch" href="/jiuto_blog/assets/js/9.52288e86.js">
+    <link rel="preload" href="/jiuto_blog/assets/css/0.styles.8eccc1ce.css" as="style"><link rel="preload" href="/jiuto_blog/assets/js/app.89c882cd.js" as="script"><link rel="preload" href="/jiuto_blog/assets/js/6.6e8c67be.js" as="script"><link rel="prefetch" href="/jiuto_blog/assets/js/10.4810e6e0.js"><link rel="prefetch" href="/jiuto_blog/assets/js/11.36d3a2b0.js"><link rel="prefetch" href="/jiuto_blog/assets/js/12.d78a7319.js"><link rel="prefetch" href="/jiuto_blog/assets/js/13.af72201c.js"><link rel="prefetch" href="/jiuto_blog/assets/js/14.4d238b06.js"><link rel="prefetch" href="/jiuto_blog/assets/js/15.c2b674c5.js"><link rel="prefetch" href="/jiuto_blog/assets/js/2.36a0744b.js"><link rel="prefetch" href="/jiuto_blog/assets/js/3.85c57184.js"><link rel="prefetch" href="/jiuto_blog/assets/js/4.9ef5a331.js"><link rel="prefetch" href="/jiuto_blog/assets/js/5.cb600e9e.js"><link rel="prefetch" href="/jiuto_blog/assets/js/7.f80bde84.js"><link rel="prefetch" href="/jiuto_blog/assets/js/8.89a8a5ea.js"><link rel="prefetch" href="/jiuto_blog/assets/js/9.21edddab.js">
     <link rel="stylesheet" href="/jiuto_blog/assets/css/0.styles.8eccc1ce.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>Looks like we've got some broken links.</blockquote> <a href="/jiuto_blog/" class="router-link-active">
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/jiuto_blog/" class="router-link-active">
       Take me home.
     </a></div></div><div class="global-ui"></div></div>
-    <script src="/jiuto_blog/assets/js/app.5e3ef2d8.js" defer></script><script src="/jiuto_blog/assets/js/6.c8b7a84a.js" defer></script>
+    <script src="/jiuto_blog/assets/js/app.89c882cd.js" defer></script><script src="/jiuto_blog/assets/js/6.6e8c67be.js" defer></script>
   </body>
 </html>
