docs:增加自动化部署

--- a/404.html
+++ b/404.html
@@ -8,13 +8,13 @@
     <link rel="icon" href="favicon.ico">
     <meta name="description" content="Just playing around">
     
-    <link rel="preload" href="/jiuto_blog/assets/css/0.styles.8eccc1ce.css" as="style"><link rel="preload" href="/jiuto_blog/assets/js/app.2442f2a8.js" as="script"><link rel="preload" href="/jiuto_blog/assets/js/6.c8b7a84a.js" as="script"><link rel="prefetch" href="/jiuto_blog/assets/js/10.f10b1843.js"><link rel="prefetch" href="/jiuto_blog/assets/js/11.36d3a2b0.js"><link rel="prefetch" href="/jiuto_blog/assets/js/12.d3b032ad.js"><link rel="prefetch" href="/jiuto_blog/assets/js/13.b3abae53.js"><link rel="prefetch" href="/jiuto_blog/assets/js/14.92a52fb8.js"><link rel="prefetch" href="/jiuto_blog/assets/js/15.7d7e0602.js"><link rel="prefetch" href="/jiuto_blog/assets/js/16.1caf0791.js"><link rel="prefetch" href="/jiuto_blog/assets/js/2.36a0744b.js"><link rel="prefetch" href="/jiuto_blog/assets/js/3.6391a0d0.js"><link rel="prefetch" href="/jiuto_blog/assets/js/4.9d8efee8.js"><link rel="prefetch" href="/jiuto_blog/assets/js/5.cb600e9e.js"><link rel="prefetch" href="/jiuto_blog/assets/js/7.86963acb.js"><link rel="prefetch" href="/jiuto_blog/assets/js/8.89a8a5ea.js"><link rel="prefetch" href="/jiuto_blog/assets/js/9.921ef6ce.js">
-    <link rel="stylesheet" href="/jiuto_blog/assets/css/0.styles.8eccc1ce.css">
+    <link rel="preload" href="/jiuto_blog/assets/css/0.styles.e8c1cc49.css" as="style"><link rel="preload" href="/jiuto_blog/assets/js/app.f28c4716.js" as="script"><link rel="preload" href="/jiuto_blog/assets/js/6.c8b7a84a.js" as="script"><link rel="prefetch" href="/jiuto_blog/assets/js/10.11245e79.js"><link rel="prefetch" href="/jiuto_blog/assets/js/11.94ce2305.js"><link rel="prefetch" href="/jiuto_blog/assets/js/12.289f99c1.js"><link rel="prefetch" href="/jiuto_blog/assets/js/13.65af8872.js"><link rel="prefetch" href="/jiuto_blog/assets/js/14.34a47fc3.js"><link rel="prefetch" href="/jiuto_blog/assets/js/15.7e77981f.js"><link rel="prefetch" href="/jiuto_blog/assets/js/16.6e188411.js"><link rel="prefetch" href="/jiuto_blog/assets/js/17.e50a24f1.js"><link rel="prefetch" href="/jiuto_blog/assets/js/2.36a0744b.js"><link rel="prefetch" href="/jiuto_blog/assets/js/3.6391a0d0.js"><link rel="prefetch" href="/jiuto_blog/assets/js/4.8c4a9ffe.js"><link rel="prefetch" href="/jiuto_blog/assets/js/5.df2d1880.js"><link rel="prefetch" href="/jiuto_blog/assets/js/7.b62755bf.js"><link rel="prefetch" href="/jiuto_blog/assets/js/8.6cf48347.js"><link rel="prefetch" href="/jiuto_blog/assets/js/9.7927c91f.js">
+    <link rel="stylesheet" href="/jiuto_blog/assets/css/0.styles.e8c1cc49.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/jiuto_blog/" class="router-link-active">
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>There's nothing here.</blockquote> <a href="/jiuto_blog/" class="router-link-active">
       Take me home.
     </a></div></div><div class="global-ui"></div></div>
-    <script src="/jiuto_blog/assets/js/app.2442f2a8.js" defer></script><script src="/jiuto_blog/assets/js/6.c8b7a84a.js" defer></script>
+    <script src="/jiuto_blog/assets/js/app.f28c4716.js" defer></script><script src="/jiuto_blog/assets/js/6.c8b7a84a.js" defer></script>
   </body>
 </html>
